<resources>
    <string name="free_app_name">SCR Free</string>
    <string name="free_app_full_name">SCR Screen Recorder Free</string>
    <string name="pro_app_name">SCR Pro</string>
    <string name="pro_app_full_name">SCR Screen Recorder Pro</string>
    <string name="free_app_no_root_name">SCR 5+ Free</string>
    <string name="free_app_no_root_full_name">SCR 5+ Screen Recorder Free</string>
    <string name="pro_app_no_root_name">SCR 5+ Pro</string>
    <string name="pro_app_no_root_full_name">SCR 5+ Screen Recorder Pro</string>
    <string name="play_free_app_name_30_char">
SCR Screen Recorder Free ★ root
    </string>
    <string name="play_pro_app_name_30_char">
SCR Screen Recorder Pro ★root
    </string>
    <string name="play_description_short_80_char">
Record your screen and system audio to HD video file! Requires root!
    </string>
    <string name="play_root_required">
<b>Works only on rooted / jailbroken / unlocked devices!</b><br/>Don\'t install if your device is not rooted.
    </string>
    <string name="play_description_main">
Check out SCR Screen Recorder, the Android most comprehensive screencast recording app.
SCR Screen Recorder supports all Android versions since 4.0 and utilizes the best encoding method available on each platform.
Since the first release in early 2013 SCR Screen Recorder is frequently updated and new features are added regularly.

Unique features:
    </string>
    <string name="play_description_system_audio">"
• SYSTEM AUDIO - On most devices you can directly record in-game audio
without quality loss caused by microphone recording speakers output.
The "Internal + Mic" option allows to add a microphone commentary to the system audio recording.
At the moment this feature is not available on Android 4.2 but it'll be added soon.
    "</string>
    <string name="play_description_features">"
• FACE CAM - Share your emotions by adding a front-facing camera to your video.
You can move the camera overlay around so that it doesn't obstruct important controls.

• NO ADS - Unlike other \"free\" screen recorders SCR never display any ads.
Development of all my apps is supported only by donations and Pro versions.

• SETTINGS - No mater if you prefer to select simple presets or manually tweak every setting
we've got you covered. SCR supports many customizations and provides performance and stability stats.

• ALPHA FEATURES - Let us know what's important to you by joining SCR Alpha Testing Google+ community at http://goo.gl/PGYZ8r
If you'd like to receive Alpha updates and test brand new features follow the links in the About community section.
    "</string>
    <string name="play_ban_disclaimer">
The previous version of this app had over 2 millions downloads and 37k reviews
    </string>
    <string name="play_description_free_limits">
With <b>SCR Free</b> you can record maximum 3 minutes screencasts and the SCR watermark is added to your video.
Buy <b>SCR Pro</b> to get unlimited screencast length with no watermark.
    </string>
        <string name="play_description_pro">
Before you buy consider testing <b>SCR Free</b> to ensure that your device is already supported.
    </string>
    <string name="play_description_stablity">
SCR Screen Recorder uses various hacks and unofficial APIs which may not work on some devices and ROMs.
If you encounter any issues please report it at scr.screen.recorder@hotmail.com to help me get your device supported.
    </string>
    <string name="play_small_print_stats">
This app collects anonymous usage statistics to help track bugs and analyze devices compatibility.
    </string>
    <string name="play_small_print_lgpl">
This software uses unmodified code of FFmpeg 1.2 licensed under the LGPL.
    </string>
    <string name="play_noroot_description_short_80_char">
Lightweight Lollipop screen recorder with cool Face Cam feature. [no root]
    </string>
    <string name="play_noroot_description_main">"
SCR 5+ opens a new chapter in the history of the famous SCR Screen Recorder.
Thanks to the new Android 5.0 features SCR 5+ allows to record screen without root access!

Unfortunately Lollipop doesn't natively support internal audio recording yet,
so if you require this feature and your device is rooted install SCR Screen Recorder Root.
    "</string>
    <string name="recording_saved_title">SCR Recording Saved</string>
    <string name="recording_saved_toast">Recording saved to %1$s</string>
    <string name="max_file_size_reached_toast">Max file size reached. Recording saved to %1$s</string>
    <string name="play">Play</string>
    <string name="su_required_title">Root access is required</string>
    <string name="su_required_message">To run any screen recorder app your phone/tablet needs to be rooted.
        There are plenty tutorials on the Internet explaining how to root different devices. Please come back when you are done!</string>
    <string name="su_required_help">What\'s "rooting"?</string>
    <string name="su_required_help_link">http://www.androidpolice.com/2010/04/15/rooting-explained-top-5-benefits-of-rooting-your-android-phone/</string>
    <string name="su_required_lollipop_message">To use full potential of %1$s your device needs to be rooted.
        Android 5.0 allows basic screen recording without root (no internal audio). Check it out by downloading lightweight %2$s or switching to No-root mode.
    </string>
    <string name="su_required_lollipop_denied_message">If your device is rooted please open %1$s and make sure you haven\'t accidentally denied root access to %2$s.</string>
    <string name="su_required_no_root_mode">No-root mode</string>
    <string name="settings_donate">Donate with PayPal</string>
    <string name="settings_no_root_only">Only for no root encoders</string>
    <string name="settings_root_only">Only for root encoders</string>
    <string name="settings_no_root_mode">No-root mode</string>
    <string name="settings_no_root_mode_summary">Tap to request root access and enable all features</string>
    <string name="error_dialog_title">Something went seriously wrong :-(</string>
    <string name="unknown_error_message">The anonymous error report will be sent automatically to help us fix the issue. Feel free to get in touch via support email quoting error SR%1$d.</string>
    <string name="selinux_error_title">Root access error</string>
    <string name="selinux_error_message">There is a problem with SELinux configuration on your device. Make sure your device is properly rooted and switch SELinux to permissive mode if possible.</string>
    <string name="media_recorder_error_title">Recorder error</string>
    <string name="media_recorder_error_message">Try changing resolution or switching image transformation between GPU/CPU. Please uninstall other screencast applications if you have any. If the problem persists please get in touch via support email quoting error R%1$d.</string>
    <string name="video_codec_error_title">Incompatible Video Settings</string>
    <string name="video_codec_error_message">Try reducing resolution or video bitrate. Note that on some devices portrait video orientation works only with lower resolutions. If the problem persists please get in touch via support email quoting error R%1$d.</string>
    <string name="output_file_error_title">Can\'t create video file</string>
    <string name="output_file_error_message">SCR was unable to create %1$s video file. Make sure that selected output directory is writable and that SD Card is not locked by USB connection.</string>
    <string name="microphone_busy_error_title">Microphone busy</string>
    <string name="microphone_busy_error_message">
        Only one app can use microphone at a time. This is an Android system limitation.
        Close other app using the microphone (e.g. Google Now or Skype) or continue recording without audio.
    </string>
    <string name="microphone_busy_error_continue_mute">Continue Mute</string>
    <string name="screen_protected_error_title">Screen protected</string>
    <string name="screen_protected_error_message">The screen can\’t be captured because some app marked the screen content as secure.</string>
    <string name="opengl_error_title">GPU not supported</string>
    <string name="opengl_error_message">Your graphic card is not supported yet.
        Switch Image transformation setting to CPU or use software video encoder.
    </string>
    <string name="audio_config_error_title">Audio error</string>
    <string name="audio_config_error_message">Unsupported audio configuration. Try changing SCR audio settings.</string>
    <string name="android_version_error_title">Android version not supported</string>
    <string name="android_version_error_message">Your Android version is not supported yet.</string>
    <string name="cpu_error_title">CPU not supported</string>
    <string name="cpu_error_message">Your CPU architecture (%1$s) is not supported by %2$s.</string>
    <string name="installation_error_title">Installation error</string>
    <string name="installation_error_message">Can\'t install required files. Make sure you have some free space on your device and restart %1$s.</string>
    <string name="help_stop_title">How to stop</string>
    <string name="help_stop_ok">Got it!</string>
    <string name="free_timeout_title">Time limit expired</string>
    <string name="free_timeout_message">Buy SCR Screen Recorder Pro to get unlimited recording time and no watermark on the video.</string>
    <string name="free_timeout_buy">Buy now!</string>
    <string name="free_timeout_no_thanks">No thanks</string>
    <string name="hide_icon_title">Pro feature</string>
    <string name="hide_icon_message">Buy SCR Screen Recorder Pro to hide watermark and notification icon. You\'ll get unlimited recording time as well!</string>
    <string name="buy_error_title">Google Play error</string>
    <string name="buy_error_message">Please search for SCR Screen Recorder Pro in Google Play</string>
    <string name="settings_activity_label">SCR Settings</string>
    <string name="settings_title">Settings</string>
    <string name="settings_ok">OK</string>
    <string name="settings_reset">Restore defaults</string>
    <string name="settings_cancel">Cancel</string>
    <string name="settings_unstable">%1$s (unstable)</string>
    <string name="settings_video_category">Video</string>
    <string name="settings_video_encoder">Encoder</string>
    <string name="settings_video_encoder_h264">H264</string>
    <string name="settings_video_encoder_mpeg_4_sp">MPEG-4 SP</string>
    <string name="settings_video_encoder_ffmpeg_mpeg_4">Software MPEG-4</string>
    <string name="settings_video_encoder_built_in_summary">Android built-in %1$s encoder</string>
    <string name="settings_video_encoder_ffmpeg_summary">FFmpeg software MPEG4 encoder</string>
    <string name="settings_video_encoder_no_root_h264">H264 (no root)</string>
    <string name="settings_video_encoder_no_root_mpeg_4">MPEG-4 (no root)</string>
    <string name="settings_video_encoder_mpeg_4">MPEG-4</string>
    <string name="settings_resolution">Resolution</string>
    <string name="settings_resolution_short">%1$dx%2$d</string>
    <string name="settings_resolution_p">%1$dx%2$d - %2$dp</string>
    <string name="settings_resolution_horizontal">%1$dx%2$d - %1$dp horizontal</string>
    <string name="settings_resolution_padding">%1$dx%2$d - %2$dp with padding</string>
    <string name="settings_resolution_max">%1$dx%2$d - Max</string>
    <string name="settings_resolution_half">%1$dx%2$d - Half</string>
    <string name="settings_transformation">Image transformation</string>
    <string name="settings_video_bitrate">Bitrate</string>
    <string name="settings_frame_rate">Frame rate</string>
    <string name="settings_sampling_rate">Sampling rate</string>
    <string name="settings_hide_icon">Hide notification icon</string>
    <string name="settings_color_fix">Inverted color fix</string>
</resources>